[Edit] Move constants to upper

--- a/body_to_title/body_to_title_model.ipynb
+++ b/body_to_title/body_to_title_model.ipynb
@@ -36,7 +36,16 @@
    "source": [
     "SOT = 'sot'\n",
     "EOT = 'eot'\n",
-    "PAD = 0"
+    "PAD = 0\n",
+    "\n",
+    "embedding_dim = 256\n",
+    "hidden_size = 128\n",
+    "encoder_layer_size = 1\n",
+    "learning_late = 0.001\n",
+    "dropout = 0.4\n",
+    "\n",
+    "epochs = 5\n",
+    "batch_size = 1"
    ],
    "metadata": {
     "collapsed": false,
@@ -295,12 +304,6 @@
     }
    ],
    "source": [
-    "embedding_dim = 256\n",
-    "hidden_size = 128\n",
-    "encoder_layer_size = 1\n",
-    "learning_late = 0.001\n",
-    "dropout = 0.4\n",
-    "\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.layers import Input, Embedding, GRU, Attention, Concatenate, Dense\n",
     "from tensorflow.keras.activations import softmax\n",
@@ -456,9 +459,6 @@
     }
    ],
    "source": [
-    "epochs = 5\n",
-    "batch_size = 1\n",
-    "\n",
     "history = model.fit(\n",
     "    [x_train, y_train[:, :-1]], y_train[:, 1:],\n",
     "    epochs=epochs, batch_size=batch_size,\n",
