[Edit] Move libraries importation to upper
* Move numpy importation to upper
* Move typing importation to upper

--- a/body_to_title/body_to_title_model.ipynb
+++ b/body_to_title/body_to_title_model.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Required Packages: [\n",
+    "Required Libraries: [\n",
     "    \"numpy(1.18.1)\",\n",
     "    \"tensorflow(2.1.0)\",\n",
     "    \"pandas(1.0.3)\",\n",
@@ -51,6 +51,21 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% constants\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from typing import List, Tuple, Union"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% import libraries\n"
     }
    }
   },
@@ -199,7 +214,6 @@
    ],
    "source": [
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "import numpy as np\n",
     "\n",
     "tokenizer = Tokenizer(filters='')\n",
     "tokenizer.fit_on_texts(title_separated)\n",
@@ -237,8 +251,6 @@
     }
    ],
    "source": [
-    "from typing import List\n",
-    "\n",
     "def padding(lst: List[int], max_len: int) -> List[int]:\n",
     "    return lst + [PAD] * (max_len - len(lst))\n",
     "\n",
@@ -618,8 +630,6 @@
     }
    ],
    "source": [
-    "from typing import Tuple, Union\n",
-    "\n",
     "def encoding(text: str) -> np.ndarray:\n",
     "    separated = k.get_morphes_by_tags(text)\n",
     "    tokenized = tokenizer.texts_to_sequences([separated])[0]\n",
