[Edit] Add positional encoding code

--- a/body_to_title/body_to_title_transformer.ipynb
+++ b/body_to_title/body_to_title_transformer.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_dim = 256\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true,
@@ -55,16 +64,23 @@
    "source": [
     "from util.preprocessing import Preprocessor\n",
     "\n",
-    "preprocessor = Preprocessor()\n",
+    "content_preprocessor = Preprocessor()\n",
+    "title_preprocessor = Preprocessor()\n",
     "\n",
-    "content_separated = preprocessor.separate_text(contents)\n",
-    "title_separated = preprocessor.add_tokens(True).separate_text(titles)\n",
+    "content_separated = content_preprocessor.separate_text(contents)\n",
+    "title_separated = title_preprocessor.separate_text(titles, add_token=True)\n",
     "\n",
-    "preprocessor.fit_tokenizer(content_separated)\n",
-    "preprocessor.fit_tokenizer(title_separated)\n",
+    "content_separated = content_preprocessor.padding(content_separated)\n",
+    "title_separated = title_preprocessor.padding(title_separated)\n",
     "\n",
-    "content_sequence = preprocessor.tokenize(content_separated)\n",
-    "title_sequence = preprocessor.tokenize(title_separated)"
+    "content_preprocessor.fit_tokenizer(content_separated)\n",
+    "title_preprocessor.fit_tokenizer(title_separated)\n",
+    "\n",
+    "content_sequence = content_preprocessor.tokenize(content_separated).to_numpy()\n",
+    "title_sequence = title_preprocessor.tokenize(title_separated).to_numpy()\n",
+    "\n",
+    "content_sequence = content_preprocessor.positional_encoding(content_sequence, embedding_dim)\n",
+    "title_sequence = title_preprocessor.positional_encoding(title_sequence, embedding_dim)"
    ],
    "metadata": {
     "collapsed": false,
